--- a/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
+++ b/WindowExplorer/Sources/Controllers/RecordViewController/Record.storyboard
@@ -82,6 +82,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="XCO-vm-Fbg">
+                                <rect key="frame" x="416" y="559" width="140" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Y6K-Mr-ied"/>
+                                    <constraint firstAttribute="width" constant="140" id="eQ7-Ii-eJG"/>
+                                </constraints>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="hide-related-items" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="gf8-fI-nx4">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="toggleRelatedItems:" target="7oi-8d-QFD" id="Wum-2F-Gf2"/>
+                                </connections>
+                            </button>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="83q-cx-wcX" userLabel="contentView">
                                 <rect key="frame" x="0.0" y="0.0" width="416" height="599"/>
                                 <subviews>
@@ -180,22 +194,46 @@
                                             <action selector="closeWindowTapped:" target="7oi-8d-QFD" id="Hls-Py-02a"/>
                                         </connections>
                                     </button>
-                                    <containerView translatesAutoresizingMaskIntoConstraints="NO" id="bIs-gt-Rch">
+                                    <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ufY-Kg-vBR">
                                         <rect key="frame" x="8" y="351" width="400" height="200"/>
+                                        <clipView key="contentView" drawsBackground="NO" id="IhY-hb-dfg">
+                                            <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <subviews>
+                                                <collectionView id="Eaz-7m-IDm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="400" height="158"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" id="dee-BC-0Jq">
+                                                        <size key="itemSize" width="50" height="200"/>
+                                                    </collectionViewFlowLayout>
+                                                    <color key="primaryBackgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="7oi-8d-QFD" id="Zd1-L4-nD8"/>
+                                                        <outlet property="delegate" destination="7oi-8d-QFD" id="esy-J9-Jgy"/>
+                                                    </connections>
+                                                </collectionView>
+                                            </subviews>
+                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                        </clipView>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="bIs-gt-Rch" secondAttribute="height" multiplier="2:1" id="cmL-G4-RYf"/>
+                                            <constraint firstAttribute="width" secondItem="ufY-Kg-vBR" secondAttribute="height" multiplier="2:1" id="kgg-HG-bJk"/>
                                         </constraints>
-                                        <connections>
-                                            <segue destination="lTd-Fq-uZh" kind="embed" id="Pcx-bX-3x0"/>
-                                        </connections>
-                                    </containerView>
+                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="yUc-lw-Iqm">
+                                            <rect key="frame" x="1" y="143" width="248" height="16"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="JyZ-2O-BFj">
+                                            <rect key="frame" x="-100" y="-100" width="15" height="143"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </scroller>
+                                    </scrollView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="FBg-bp-lkB" secondAttribute="bottom" constant="8" id="1w4-2t-1qL"/>
                                     <constraint firstAttribute="trailing" secondItem="FBg-bp-lkB" secondAttribute="trailing" constant="8" id="3e3-h1-L7H"/>
+                                    <constraint firstItem="ufY-Kg-vBR" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="8" id="CBg-hb-EdH"/>
                                     <constraint firstItem="pMP-Yg-a6e" firstAttribute="leading" secondItem="RgY-ah-SAv" secondAttribute="leading" id="Dy4-vK-Wci"/>
                                     <constraint firstItem="Suh-ao-CzL" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" id="GZt-fc-XSf"/>
-                                    <constraint firstItem="bIs-gt-Rch" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="8" id="LlR-FC-QjL"/>
                                     <constraint firstItem="RgY-ah-SAv" firstAttribute="top" secondItem="pMP-Yg-a6e" secondAttribute="bottom" constant="8" id="S3Q-5b-EbN"/>
                                     <constraint firstItem="Gya-dz-hCa" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" id="aRh-fm-jDU"/>
                                     <constraint firstItem="FBg-bp-lkB" firstAttribute="leading" secondItem="83q-cx-wcX" secondAttribute="leading" constant="8" id="fiA-kL-6Ij"/>
@@ -203,25 +241,11 @@
                                     <constraint firstItem="Gya-dz-hCa" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" id="gKY-kU-oF1"/>
                                     <constraint firstAttribute="trailing" secondItem="Suh-ao-CzL" secondAttribute="trailing" id="i3v-4f-JhI"/>
                                     <constraint firstItem="NjJ-25-aZ3" firstAttribute="trailing" secondItem="RgY-ah-SAv" secondAttribute="trailing" id="ipO-rv-rlA"/>
+                                    <constraint firstAttribute="trailing" secondItem="ufY-Kg-vBR" secondAttribute="trailing" constant="8" id="isU-1a-I8R"/>
+                                    <constraint firstItem="ufY-Kg-vBR" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="48" id="ktu-Si-a2l"/>
                                     <constraint firstItem="RgY-ah-SAv" firstAttribute="top" secondItem="NjJ-25-aZ3" secondAttribute="bottom" constant="8" id="rER-6h-yTZ"/>
-                                    <constraint firstItem="bIs-gt-Rch" firstAttribute="top" secondItem="83q-cx-wcX" secondAttribute="top" constant="48" id="rie-P2-pb8"/>
-                                    <constraint firstAttribute="trailing" secondItem="bIs-gt-Rch" secondAttribute="trailing" constant="8" id="trT-sK-Wxl"/>
                                 </constraints>
                             </customView>
-                            <button translatesAutoresizingMaskIntoConstraints="NO" id="XCO-vm-Fbg">
-                                <rect key="frame" x="416" y="559" width="140" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Y6K-Mr-ied"/>
-                                    <constraint firstAttribute="width" constant="140" id="eQ7-Ii-eJG"/>
-                                </constraints>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="hide-related-items" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="gf8-fI-nx4">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="toggleRelatedItems:" target="7oi-8d-QFD" id="Wum-2F-Gf2"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="83q-cx-wcX" firstAttribute="top" secondItem="i2Z-RE-f6z" secondAttribute="top" id="9fe-gB-ueE"/>
@@ -237,6 +261,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionClipView" destination="IhY-hb-dfg" id="T4r-mC-1YX"/>
+                        <outlet property="collectionView" destination="Eaz-7m-IDm" id="uEB-1C-9gL"/>
                         <outlet property="dateLabel" destination="NjJ-25-aZ3" id="FoT-1a-jiV"/>
                         <outlet property="detailView" destination="83q-cx-wcX" id="pb8-ex-weM"/>
                         <outlet property="hideRelatedItemsButton" destination="XCO-vm-Fbg" id="uj0-Ml-rkj"/>
@@ -249,47 +275,6 @@
                 <customObject id="0qL-TB-rJo" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-619.5" y="125.5"/>
-        </scene>
-        <!--Record Page View Controller-->
-        <scene sceneID="Csr-0P-r7G">
-            <objects>
-                <pagecontroller transitionStyle="horizontalStrip" id="lTd-Fq-uZh" customClass="RecordPageViewController" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="EXW-hu-4jc">
-                        <rect key="frame" x="0.0" y="0.0" width="490" height="200"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </view>
-                </pagecontroller>
-                <customObject id="l5q-AM-Wem" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="61" y="-74"/>
-        </scene>
-        <!--Image Page-->
-        <scene sceneID="CyV-bQ-tZo">
-            <objects>
-                <viewController storyboardIdentifier="ImagePage" id="ag0-Bf-EtL" customClass="ImagePage" customModule="WindowExplorer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="L7u-QW-zmu">
-                        <rect key="frame" x="0.0" y="0.0" width="490" height="200"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mdS-9d-PMp">
-                                <rect key="frame" x="0.0" y="0.0" width="490" height="200"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="yil-HO-98F"/>
-                            </imageView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstItem="mdS-9d-PMp" firstAttribute="leading" secondItem="L7u-QW-zmu" secondAttribute="leading" id="DN1-8z-lnD"/>
-                            <constraint firstAttribute="bottom" secondItem="mdS-9d-PMp" secondAttribute="bottom" id="VWz-Jh-aNe"/>
-                            <constraint firstItem="mdS-9d-PMp" firstAttribute="top" secondItem="L7u-QW-zmu" secondAttribute="top" id="e4D-mJ-24G"/>
-                            <constraint firstAttribute="trailing" secondItem="mdS-9d-PMp" secondAttribute="trailing" id="ufi-bd-BOd"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="imageView" destination="mdS-9d-PMp" id="qVU-aN-HgN"/>
-                    </connections>
-                </viewController>
-                <customObject id="TiX-D4-f1T" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="61" y="219"/>
         </scene>
     </scenes>
     <resources>
