--- a/WindowExplorer/Sources/Controllers/ImageViewController/Image.storyboard
+++ b/WindowExplorer/Sources/Controllers/ImageViewController/Image.storyboard
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EiL-xh-zgx">
-                                <rect key="frame" x="8" y="8" width="624" height="394"/>
+                                <rect key="frame" x="8" y="33" width="624" height="361"/>
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="z2q-nY-EnU"/>
                             </imageView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="Kbv-Qb-kGl">
@@ -26,19 +26,30 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="zbp-68-bpi"/>
                                 </constraints>
                             </customView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Xxw-S7-yBy">
+                                <rect key="frame" x="14" y="8" width="37" height="17"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Label" id="9Bb-zt-Gma">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="EiL-xh-zgx" secondAttribute="bottom" constant="8" id="7Da-n4-ZAI"/>
+                            <constraint firstAttribute="bottom" secondItem="EiL-xh-zgx" secondAttribute="bottom" constant="33" id="7Da-n4-ZAI"/>
                             <constraint firstAttribute="trailing" secondItem="EiL-xh-zgx" secondAttribute="trailing" constant="8" id="OOn-uc-ghw"/>
                             <constraint firstAttribute="trailing" secondItem="Kbv-Qb-kGl" secondAttribute="trailing" constant="8" id="c5V-YH-7YC"/>
                             <constraint firstItem="EiL-xh-zgx" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="8" id="ip3-GX-msw"/>
-                            <constraint firstItem="EiL-xh-zgx" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="8" id="wYK-M9-H08"/>
+                            <constraint firstAttribute="bottom" secondItem="Xxw-S7-yBy" secondAttribute="bottom" constant="8" id="irH-aF-J8T"/>
+                            <constraint firstItem="EiL-xh-zgx" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="16" id="wYK-M9-H08"/>
                             <constraint firstItem="Kbv-Qb-kGl" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="8" id="xwL-kD-Kw8"/>
+                            <constraint firstItem="Xxw-S7-yBy" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="16" id="zgZ-lc-gaV"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="dismissButton" destination="Kbv-Qb-kGl" id="zX2-Io-uxz"/>
                         <outlet property="imageView" destination="EiL-xh-zgx" id="uBq-ab-qPH"/>
+                        <outlet property="titleTextField" destination="Xxw-S7-yBy" id="cRy-et-eb1"/>
                     </connections>
                 </viewController>
                 <customObject id="ApF-HA-SvK" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
