--- a/WindowExplorer/Sources/Controllers/PDFViewControlller/PDF.storyboard
+++ b/WindowExplorer/Sources/Controllers/PDFViewControlller/PDF.storyboard
@@ -14,16 +14,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="522"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <pdfView autoresizesSubviews="NO" wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LrV-6C-x9X" userLabel="PDF View">
-                                <rect key="frame" x="8" y="116" width="624" height="398"/>
+                            <pdfView autoresizesSubviews="NO" wantsLayer="YES" displayMode="singlePage" translatesAutoresizingMaskIntoConstraints="NO" id="LrV-6C-x9X" userLabel="PDF View">
+                                <rect key="frame" x="116" y="8" width="516" height="506"/>
                             </pdfView>
-                            <pdfThumbnailView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B0g-yS-hPA" userLabel="PDF Thumbnail View">
-                                <rect key="frame" x="8" y="8" width="624" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="9fY-Z5-Fcn"/>
-                                </constraints>
-                                <size key="thumbnailSize" width="64" height="64"/>
-                            </pdfThumbnailView>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="Qqy-Lr-eU7">
                                 <rect key="frame" x="592" y="474" width="40" height="40"/>
                                 <constraints>
@@ -42,18 +35,25 @@
                                     <constraint firstAttribute="width" constant="40" id="zTi-dq-EYp"/>
                                 </constraints>
                             </customView>
+                            <pdfThumbnailView wantsLayer="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B0g-yS-hPA" userLabel="PDF Thumbnail View">
+                                <rect key="frame" x="8" y="8" width="100" height="506"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="c3Z-es-fiV"/>
+                                </constraints>
+                                <size key="thumbnailSize" width="64" height="64"/>
+                            </pdfThumbnailView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="Qqy-Lr-eU7" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="1kX-hE-Zhc"/>
                             <constraint firstItem="7qF-ve-yFy" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="30d-db-Lx3"/>
-                            <constraint firstItem="B0g-yS-hPA" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="Dyz-2k-98z"/>
-                            <constraint firstItem="B0g-yS-hPA" firstAttribute="leading" secondItem="LrV-6C-x9X" secondAttribute="leading" id="J7C-mu-Db4"/>
-                            <constraint firstItem="LrV-6C-x9X" firstAttribute="leading" secondItem="l0O-E9-8FM" secondAttribute="leading" constant="8" id="P7A-zj-359"/>
                             <constraint firstItem="7qF-ve-yFy" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="top" id="QGb-ig-3ex"/>
-                            <constraint firstItem="B0g-yS-hPA" firstAttribute="top" secondItem="LrV-6C-x9X" secondAttribute="bottom" constant="8" id="Yaf-X3-Jef"/>
                             <constraint firstItem="LrV-6C-x9X" firstAttribute="top" secondItem="l0O-E9-8FM" secondAttribute="top" constant="8" id="dFe-Fl-hUD"/>
-                            <constraint firstAttribute="bottom" secondItem="B0g-yS-hPA" secondAttribute="bottom" constant="8" id="h7H-db-AIi"/>
+                            <constraint firstItem="B0g-yS-hPA" firstAttribute="leading" secondItem="l0O-E9-8FM" secondAttribute="leading" constant="8" id="foc-ly-BUs"/>
+                            <constraint firstAttribute="bottom" secondItem="B0g-yS-hPA" secondAttribute="bottom" constant="8" id="hRV-jg-Rrk"/>
+                            <constraint firstItem="B0g-yS-hPA" firstAttribute="top" secondItem="l0O-E9-8FM" secondAttribute="top" constant="8" id="l2n-Pk-sRj"/>
                             <constraint firstItem="Qqy-Lr-eU7" firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" id="mRV-tk-aYe"/>
+                            <constraint firstItem="LrV-6C-x9X" firstAttribute="leading" secondItem="B0g-yS-hPA" secondAttribute="trailing" constant="8" id="raV-0L-4w8"/>
+                            <constraint firstAttribute="bottom" secondItem="LrV-6C-x9X" secondAttribute="bottom" constant="8" id="sBf-uK-f9l"/>
                             <constraint firstAttribute="trailing" secondItem="LrV-6C-x9X" secondAttribute="trailing" constant="8" id="xha-Du-P04"/>
                         </constraints>
                     </view>
