--- a/WindowExplorer/Sources/Controllers/ImageViewController/Image.storyboard
+++ b/WindowExplorer/Sources/Controllers/ImageViewController/Image.storyboard
@@ -13,14 +13,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="640" height="410"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EiL-xh-zgx">
-                                <rect key="frame" x="8" y="33" width="624" height="361"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="624" id="LGK-Gm-0du"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="361" id="SQN-0p-4XV"/>
-                                </constraints>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" id="z2q-nY-EnU"/>
-                            </imageView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="Kbv-Qb-kGl">
                                 <rect key="frame" x="592" y="362" width="40" height="40"/>
                                 <constraints>
@@ -38,21 +30,47 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTp-wA-9SL">
+                                <rect key="frame" x="8" y="33" width="624" height="361"/>
+                                <clipView key="contentView" id="SUf-jl-Y0i">
+                                    <rect key="frame" x="1" y="1" width="622" height="359"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r8h-aE-aJ5">
+                                            <rect key="frame" x="0.0" y="0.0" width="607" height="344"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.025183623656630516" green="0.93838995695114136" blue="0.11515399068593979" alpha="0.10394370719178082" colorSpace="custom" customColorSpace="sRGB"/>
+                                </clipView>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="361" id="Ged-ru-Hrf"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="624" id="hUL-Dt-u34"/>
+                                </constraints>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="vQy-Dv-4a6">
+                                    <rect key="frame" x="1" y="344" width="622" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="nVi-Xv-HAv">
+                                    <rect key="frame" x="607" y="1" width="16" height="359"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="EiL-xh-zgx" secondAttribute="bottom" constant="33" id="7Da-n4-ZAI"/>
-                            <constraint firstAttribute="trailing" secondItem="EiL-xh-zgx" secondAttribute="trailing" constant="8" id="OOn-uc-ghw"/>
+                            <constraint firstItem="WTp-wA-9SL" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="16" id="10V-YT-T1W"/>
+                            <constraint firstItem="WTp-wA-9SL" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="8" id="X9j-4u-6FB"/>
+                            <constraint firstAttribute="bottom" secondItem="WTp-wA-9SL" secondAttribute="bottom" constant="33" id="Z1e-N5-aTr"/>
                             <constraint firstAttribute="trailing" secondItem="Kbv-Qb-kGl" secondAttribute="trailing" constant="8" id="c5V-YH-7YC"/>
-                            <constraint firstItem="EiL-xh-zgx" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="8" id="ip3-GX-msw"/>
                             <constraint firstAttribute="bottom" secondItem="Xxw-S7-yBy" secondAttribute="bottom" constant="8" id="irH-aF-J8T"/>
-                            <constraint firstItem="EiL-xh-zgx" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="16" id="wYK-M9-H08"/>
+                            <constraint firstAttribute="trailing" secondItem="WTp-wA-9SL" secondAttribute="trailing" constant="8" id="xkr-jy-BVF"/>
                             <constraint firstItem="Kbv-Qb-kGl" firstAttribute="top" secondItem="sSn-s5-6HM" secondAttribute="top" constant="8" id="xwL-kD-Kw8"/>
                             <constraint firstItem="Xxw-S7-yBy" firstAttribute="leading" secondItem="sSn-s5-6HM" secondAttribute="leading" constant="16" id="zgZ-lc-gaV"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="dismissButton" destination="Kbv-Qb-kGl" id="zX2-Io-uxz"/>
-                        <outlet property="imageView" destination="EiL-xh-zgx" id="uBq-ab-qPH"/>
+                        <outlet property="imageScrollView" destination="WTp-wA-9SL" id="ycY-PS-kHc"/>
                         <outlet property="titleTextField" destination="Xxw-S7-yBy" id="cRy-et-eb1"/>
                     </connections>
                 </viewController>
